src/platform/infra/k8s/legacy/ingress/platform-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - platform.monoxor.com
    - eatio.app
    secretName: platform-tls
  rules:
  - host: eatio.app
    http:
      paths:
      - path: /echo1
        backend:
          serviceName: echo2
          servicePort: 80
  - host: platform.monoxor.com
    http:
      paths:
      - path: /echo2
        backend:
          serviceName: echo2
          servicePort: 80
  - host: platform.monoxor.com
    http:
      paths:
      - path: /nocode
        backend:
          serviceName: nocode 
          servicePort: 80
  - host: platform.monoxor.com
    http:
      paths:
      - path: /data-services
        backend:
          serviceName: data-services 
          servicePort: 80
  - host: platform.monoxor.com
    http:
      paths:
      - path: /proximity
        backend:
          serviceName: proximity-web
          servicePort: 80
